# nora

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  debians.sh  nora.sh  package.xml
configuration/: config.yaml
debian/: changelog  control  copyright  debhelper-build-stamp  rules
include/: Config.h  ConfigManager.h  IStateFetcher.h  Logger.h  OptitrackStateFetcher.h  RobotStateTracker.h  RosTopicManager.h
src/: ConfigManager.cpp  OptitrackStateFetcher.cpp  RobotStateTracker.cpp  main.cpp
